# stakework

./: CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libstakeworkconsensus.pc.in
build-aux/m4/: stakework_find_bdb48.m4  stakework_qt.m4  stakework_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  qt_translations.py  stakework-cli.bash-completion  stakework-qt.pro  stakework-tx.bash-completion  stakeworkd.bash-completion  stressor_dao.sh  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  stakework-qt.desktop  stakework-qt.install  stakework-tx.bash-completion  stakework-tx.install  stakeworkd.bash-completion  stakeworkd.examples  stakeworkd.manpages  watch
contrib/devtools/: README.md  fix-copyright-headers.py  (+2 more)
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  daoversionbit.cpp  daoversionbit.h  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  init.cpp  (+55 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  dao.cpp  dao.h  daoconsensusparams.h  merkle.cpp  merkle.h  params.h  validation.h
src/consensus/dao/: flags.h
src/crypto/: aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/mnemonic/: dictionary.h  generateseed.cpp  generateseed.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: StakeWork4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coldstakingwizard.cpp  communityfundcreatepaymentrequestdialog.cpp  communityfundcreateproposaldialog.cpp  communityfunddisplay.cpp  communityfunddisplaypaymentrequest.cpp  communityfundpage.cpp  csvmodelwriter.h  daoconsultationcreate.cpp  daoconsultationcreate.h  daoconsultationvote.cpp  daoconsultationvote.h  daopage.cpp  daopage.h  daoproposeanswer.cpp  daoproposeanswer.h  daosupport.cpp  daosupport.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  guiconstants.h  guiutil.cpp  guiutil.h  macappnapinhibitor.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  (+79 more)
src/qt/forms/: coincontroldialog.ui  communityfundcreatepaymentrequestdialog.ui  communityfundcreateproposaldialog.ui  communityfunddisplay.ui  communityfunddisplaydetailed.ui  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.ui  getaddresstoreceive.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendcommunityfunddialog.ui  signverifymessagedialog.ui
src/qt/locale/: stakework_af.ts  stakework_af_ZA.ts  stakework_ar.ts  stakework_be_BY.ts  stakework_bg.ts  stakework_bg_BG.ts  stakework_ca.ts  stakework_ca@valencia.ts  stakework_ca_ES.ts  stakework_cs.ts  stakework_cs_CZ.ts  stakework_cy.ts  stakework_da.ts  stakework_de.ts  stakework_el.ts  stakework_el_GR.ts  stakework_en.ts  stakework_en_GB.ts  stakework_eo.ts  stakework_es.ts  stakework_es_AR.ts  stakework_es_CL.ts  stakework_es_CO.ts  stakework_es_DO.ts  stakework_es_ES.ts  stakework_es_MX.ts  stakework_es_UY.ts  stakework_es_VE.ts  stakework_et.ts  stakework_eu_ES.ts  stakework_fa.ts  stakework_fa_IR.ts  stakework_fi.ts  stakework_fr.ts  stakework_fr_CA.ts  stakework_fr_FR.ts  stakework_gl.ts  stakework_he.ts  stakework_hi_IN.ts  stakework_hr.ts  (+45 more)
src/qt/res/: stakework-qt-res.rc
src/qt/res/icons/: stakework.icns
src/qt/res/themes/: app.qss  shared.qss
src/qt/res/themes/dark/: styles.qss
src/qt/res/themes/light/: styles.qss
src/qt/styles/: dark.cpp  dark.h  light.cpp  light.h
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.cpp  ismine.h  script.h  script_error.h  sigcache.h  stakeworkconsensus.cpp  stakeworkconsensus.h  standard.cpp  standard.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  cfund_tests.cpp  cfunddb_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  (+19 more)
src/test/data/: README.md  stakework-util-test.json
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+186 files in other folders)
